cmake_minimum_required(VERSION 3.5)
project(islpy)

set(CMAKE_CXX_STANDARD 11)

include_directories(BEFORE isl/include isl-supplementary extensions)

set(SOURCE_FILES
        isl/isl_aff_private.h
        isl/isl_ast_build_expr.h
        isl/isl_ast_build_private.h
        isl/isl_ast_graft_private.h
        isl/isl_ast_private.h
        isl/isl_band_private.h
        isl/isl_basis_reduction.h
        isl/isl_bernstein.h
        isl/isl_blk.h
        isl/isl_bound.h
        isl/isl_config_post.h
        isl/isl_constraint_private.h
        isl/isl_ctx_private.h
        isl/isl_dim_map.h
        isl/isl_equalities.h
        isl/isl_factorization.h
        isl/isl_hash_private.h
        isl/isl_hide_deprecated.h
        isl/isl_id_private.h
        isl/isl_ilp_private.h
        isl/isl_imath.h
        isl/isl_int.h
        isl/isl_int_gmp.h
        isl/isl_int_imath.h
        isl/isl_int_sioimath.h
        isl/isl_list_templ.h
        isl/isl_local.h
        isl/isl_local_space_private.h
        isl/isl_lp_private.h
        isl/isl_map_private.h
        isl/isl_mat_private.h
        isl/isl_morph.h
        isl/isl_multi_macro.h
        isl/isl_multi_templ.h
        isl/isl_options_private.h
        isl/isl_output_private.h
        isl/isl_point_private.h
        isl/isl_polynomial_private.h
        isl/isl_printer_private.h
        isl/isl_pw_macro.h
        isl/isl_range.h
        isl/isl_reordering.h
        isl/isl_sample.h
        isl/isl_scan.h
        isl/isl_schedule_band.h
        isl/isl_schedule_constraints.h
        isl/isl_schedule_node_private.h
        isl/isl_schedule_private.h
        isl/isl_schedule_tree.h
        isl/isl_seq.h
        isl/isl_sort.h
        isl/isl_space_private.h
        isl/isl_stream_private.h
        isl/isl_tab.h
        isl/isl_tarjan.h
        isl/isl_union_macro.h
        isl/isl_union_map_private.h
        isl/isl_val_private.h
        isl/isl_vec_private.h
        isl/isl_vertices_private.h
        isl/isl_yaml.h

        isl/imath/bintest.c
        isl/imath/bug-swap.c
        isl/imath/gmp_compat.c
        isl/imath/imath.c
        isl/imath/imdrover.c
        isl/imath/imrat.c
        isl/imath/imtest.c
        isl/imath/imtimer.c
        isl/imath/iprime.c
        isl/imath/pi.c
        isl/imath/rsamath.c
        isl/imath/rtest.c
        isl/imath_wrap/gmp_compat.c
        isl/imath_wrap/imath.c
        isl/imath_wrap/imrat.c
        isl/isl_aff.c
        isl/isl_affine_hull.c
        isl/isl_arg.c
        isl/isl_ast.c
        isl/isl_ast_build.c
        isl/isl_ast_build_expr.c
        isl/isl_ast_codegen.c
        isl/isl_ast_graft.c
        isl/isl_ast_int.c
        isl/isl_band.c
        isl/isl_bernstein.c
        isl/isl_blk.c
        isl/isl_bound.c
        isl/isl_coalesce.c
        isl/isl_constraint.c
        isl/isl_convex_hull.c
        isl/isl_ctx.c
        isl/isl_deprecated.c
        isl/isl_dim_map.c
        isl/isl_equalities.c
        isl/isl_factorization.c
        isl/isl_farkas.c
        isl/isl_ffs.c
        isl/isl_flow.c
        isl/isl_fold.c
        isl/isl_gmp.c
        isl/isl_hash.c
        isl/isl_id.c
        isl/isl_id_to_ast_expr.c
        isl/isl_id_to_id.c
        isl/isl_id_to_pw_aff.c
        isl/isl_ilp.c
        isl/isl_imath.c
        isl/isl_input.c
        isl/isl_int_sioimath.c
        isl/isl_list_templ.c
        isl/isl_local.c
        isl/isl_local_space.c
        isl/isl_lp.c
        isl/isl_map.c
        isl/isl_map_lexopt_templ.c
        isl/isl_map_list.c
        isl/isl_map_simplify.c
        isl/isl_map_subtract.c
        isl/isl_map_to_basic_set.c
        isl/isl_mat.c
        isl/isl_morph.c
        isl/isl_multi_apply_set.c
        isl/isl_multi_apply_templ.c
        isl/isl_multi_apply_union_set.c
        isl/isl_multi_cmp.c
        isl/isl_multi_coalesce.c
        isl/isl_multi_floor.c
        isl/isl_multi_gist.c
        isl/isl_multi_hash.c
        isl/isl_multi_intersect.c
        isl/isl_multi_templ.c
        isl/isl_obj.c
        isl/isl_options.c
        isl/isl_output.c
        isl/isl_point.c
        isl/isl_polynomial.c
        isl/isl_power_templ.c
        isl/isl_printer.c
        isl/isl_pw_hash.c
        isl/isl_pw_templ.c
        isl/isl_pw_union_opt.c
        isl/isl_range.c
        isl/isl_reordering.c
        isl/isl_sample.c
        isl/isl_scan.c
        isl/isl_schedule.c
        isl/isl_schedule_band.c
        isl/isl_schedule_constraints.c
        isl/isl_schedule_node.c
        isl/isl_schedule_read.c
        isl/isl_schedule_tree.c
        isl/isl_scheduler.c
        isl/isl_seq.c
        isl/isl_set_list.c
        isl/isl_sort.c
        isl/isl_space.c
        isl/isl_stream.c
        isl/isl_tab.c
        isl/isl_tab_lexopt_templ.c
        isl/isl_tab_pip.c
        isl/isl_tarjan.c
        isl/isl_test.c
        isl/isl_test_imath.c
        isl/isl_test_int.c
        isl/isl_transitive_closure.c
        isl/isl_union_eval.c
        isl/isl_union_map.c
        isl/isl_union_multi.c
        isl/isl_union_neg.c
        isl/isl_union_single.c
        isl/isl_union_templ.c
        isl/isl_val.c
        isl/isl_val_gmp.c
        isl/isl_val_imath.c
        isl/isl_val_sioimath.c
        isl/isl_vec.c
        isl/isl_version.c
        isl/isl_vertices.c

        extensions/isl_extensions/custom_functions.cpp
        )
add_library(islpy ${SOURCE_FILES})